@@ -18,6 +18,7 @@ Version 0.4c
  - All black magic replaced
  - Most healing spells replaced
 * Kyna is locked to debug mode. I'll leave her where she is for now, but she's likely going to be removed at some point in the future.
+* The outlaws intro tweaked slightly (Zenith)
 
 --------------------------------------------
              PREVIOUS VERSIONS
